--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         >
           <iframe
             class="hero__container__background_video"
-            src="https://www.youtube.com/embed/zqc3p6aqJG8?controls=0"
+            src="https://www.youtube.com/embed/zqc3p6aqJG8?&enablejsapi=1&disablekb=1&controls=0&rel=0&iv_load_policy=3&cc_load_policy=0&playsinline=1&showinfo=0&modestbranding=1&fs=0&mute=1&autoplay=1&loop=1"
             frameborder="0"
             title="Parque Torres del Paine y Glaciar Grey"
           ></iframe>
