--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
         >
           <iframe
             class="hero__container__background_video"
-            src="https://www.youtube.com/embed/zqc3p6aqJG8?&enablejsapi=1&disablekb=1&controls=0&rel=0&iv_load_policy=3&cc_load_policy=0&playsinline=1&showinfo=0&modestbranding=1&fs=0&mute=1&autoplay=1&loop=1"
+            src="https://www.youtube.com/embed/zqc3p6aqJG8?&enablejsapi=1&disablekb=1&controls=0&rel=0&iv_load_policy=3&cc_load_policy=0&playsinline=1&showinfo=0&modestbranding=1&fs=0&mute=1&autoplay=1&loop=1&playlist=zqc3p6aqJG8"
             frameborder="0"
             title="Parque Torres del Paine y Glaciar Grey"
           ></iframe>
         </div>
         <div class="container">
           <div class="hero__container_title">
-            <h1></h1>
+            <h1  class="hero__container_h1">VIVE LA ENERGÍA DE CHILE!</h1>
             <p></p>
           </div>
           <div class="hero__container_options">
