--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <nav class="header__main_nav">
             <a
               class="header__main_nav-logo"
-              href="https://www.visitchile.com/es/"
+              href="index.html"
               ><img
                 style="height: 55px"
                 src="https://www.visitchile.com/img/es_logo-desktop.svg"
