--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
       <div class="header__main_container">
         <div class="header__main">
           <nav class="header__main_nav">
-            <a
-              class="header__main_nav-logo"
-              href="index.html"
+            <a class="header__main_nav-logo" href="index.html"
               ><img
                 style="height: 55px"
                 src="https://www.visitchile.com/img/es_logo-desktop.svg"
@@ -98,15 +96,48 @@
               </li>
             </ul>
             <div class="hero__container_search">
-              <div class="hero__container_search_tab">
-                <label class="hero__container_search_label" for="destinos">destinos</label>
-                <!-- beforebegin -->
-                <select class="hero__container_search_select" name="destinos" id="destinos">
-                  <!-- afterbegin -->
-                  <!-- beforeend -->
-                </select>
-                <!-- afterend -->
+              <div class="hero__container_search-body">
+              <div class="dropdown">
+                <div class="select">
+                  <span class="select-title">Destinos</span>
+                  <div class="arrow"></div>
+                </div>
+                <ul class="menu">
+                  <li>Viña del mar</li>
+                  <li>Santiago</li>
+                  <li>La Serena</li>
+                  <li>Antofagasta</li>
+                  <li>San</li>
+                </ul>
               </div>
+              <div class="dropdown">
+                <input class="select" type="date">
+                <!-- <div class="select">
+                  <span class="select-title">Destinos</span>
+                  <div class="arrow"></div>
+                </div>
+                <ul class="menu">
+                  <li>Viña del mar</li>
+                  <li>Santiago</li>
+                  <li>La Serena</li>
+                  <li>Antofagasta</li>
+                  <li>San</li>
+                </ul> -->
+              </div>
+              <div class="dropdown">
+                <div class="select">
+                  <span class="select-title">Destinos</span>
+                  <div class="arrow"></div>
+                </div>
+                <ul class="menu">
+                  <li>Viña del mar</li>
+                  <li>Santiago</li>
+                  <li>La Serena</li>
+                  <li>Antofagasta</li>
+                  <li>San</li>
+                </ul>
+              </div>
+            </div>
             </div>
           </div>
         </div>
