--- a/clima.html
+++ b/clima.html
@@ -10,15 +10,19 @@
 
   <body>
     <main>
-        <h1>Buscar ciudad</h1>
+      <h1>Buscar ciudad</h1>
       <div class="contenedor" style="text-align: center">
         <select id="search" class="sel">
           <option selected disabled>Elige ciudad</option>
           <option value="San Pedro">San Pedro de Atacama</option>
           <option value="Antofagasta">Antofagasta</option>
           <option value="La Serena">La Serena</option>
+          <option value="Viña del Mar">Viña del Mar</option>
           <option value="Valparaíso">Valparaíso</option>
           <option value="Santiago">Santiago</option>
+          <option value="Chillán">Chillán</option>
+          <option value="Talca">Talca</option>
+          <option value="Valdivia">Valdivia</option>
           <option value="Puerto Montt">Puerto Montt</option>
         </select>
 
