--- a/4.html
+++ b/4.html
@@ -48,11 +48,24 @@
 
     <section class="contenedor_ciudad">
       <h2 class="ciudad_title">Valparaíso Santiago y Viñedos</h2>
-      <div class="ciudad_gap-row ">
-        <img class="ciudad_imagen" src="./assets/img/VP/ff016182-city-835-16e60d10354.jpg" alt="LagunaColorada Entre San Pedro y Bolovia" />
-        <p class="ciudad_parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error id, dolore corporis assumenda eveniet unde! Sequi tenetur omnis eligendi aperiam dignissimos iure nostrum maiores nisi dicta ipsam voluptas dolorum asperiores maxime, eaque dolore aut placeat nemo voluptate. Deserunt porro autem minima, sint facilis adipisci praesentium voluptate molestias, cum est culpa.</p>
+      <div class="ciudad_gap-row">
+        <img
+          class="ciudad_imagen"
+          src="./assets/img/VP/ff016182-city-835-16e60d10354.jpg"
+          alt="LagunaColorada Entre San Pedro y Bolovia"
+        />
+        <p class="ciudad_parrafo">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error id,
+          dolore corporis assumenda eveniet unde! Sequi tenetur omnis eligendi
+          aperiam dignissimos iure nostrum maiores nisi dicta ipsam voluptas
+          dolorum asperiores maxime, eaque dolore aut placeat nemo voluptate.
+          Deserunt porro autem minima, sint facilis adipisci praesentium
+          voluptate molestias, cum est culpa.
+        </p>
       </div>
-      <a class="ciudad_boton-volver" href="./index.html">Volver a la página principal</a>
+      <a class="ciudad_boton-volver" href="./index.html"
+        >Volver a la página principal</a
+      >
     </section>
     <footer class="containter__footer">
       <div class="container__main">
