--- a/clima.html
+++ b/clima.html
@@ -25,9 +25,13 @@
           <option value="Valdivia">Valdivia</option>
           <option value="Puerto Montt">Puerto Montt</option>
         </select>
+        
 
         <div class="clima" id="weather"></div>
       </div>
+      <a class="ciudad_boton-volver" href="./index.html"
+        >Volver a la página principal</a
+      >
     </main>
     <script src="./assets/js/clima.js"></script>
   </body>
