--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
 
       <section class="container__video">
         <div class="container__video_info" id="about">
-          <h1 class="contact__title container_destinos_titulo-h2 section-title">QUIENES SOMOS</h1>
+          <h1 class="contact__title container_destinos_titulo-h2 section-title">
+            QUIENES SOMOS
+          </h1>
           <img
             class="about_img"
             src="https://visitchile.imgix.net/assets/img/turismochile.png?w=135&amp;h=100&amp;fit=crop&amp;q=auto&amp;auto=format"
