--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="hero__container_options">
             <ul class="hero__container_options_ul">
               <li class="hero__container_options_ul-li">
-                <a class="hero__container_options_ul-li-a" href="#">
+                <a class="hero__container_options_ul-li-a" href="#tours">
                   <div class="hero__container_a">
                     <figure class="hero__container_a_fig">
                       <i
@@ -88,7 +88,7 @@
                 </a>
               </li>
               <li class="hero__container_options_ul-li">
-                <a class="hero__container_options_ul-li-a" href="#">
+                <a class="hero__container_options_ul-li-a" href="#actividades">
                   <div class="hero__container_a">
                     <figure class="hero__container_a_fig">
                       <i class="uil uil-swimmer hero__container_a_i"></i>
@@ -98,7 +98,7 @@
                 </a>
               </li>
               <li class="hero__container_options_ul-li">
-                <a class="hero__container_options_ul-li-a" href="#">
+                <a class="hero__container_options_ul-li-a" href="#hotel">
                   <div class="hero__container_a">
                     <figure class="hero__container_a_fig">
                       <i class="uil uil-building hero__container_a_i"></i>
@@ -108,10 +108,10 @@
                 </a>
               </li>
             </ul>
-            <div class="hero__container_search">
-              <div class="hero__container_search-form">
-                <select id="myForm"></select>
-                <select id="myDate"></select>
+            <!-- <div class="hero__container_search"> -->
+              <!-- <div class="hero__container_search-form"> -->
+                <!-- <select id="myForm"></select>
+                <select id="myDate"></select> -->
               </div>
             </div>
           </div>
@@ -174,6 +174,7 @@
       </div>
 
       <div
+        id="actividades"
         class="container__video"
         style="
           background-image: url(https://i4.visitchile.com/img/Banner/16/main.png);
@@ -260,7 +261,7 @@
               <button class="button">Enviar</button>
             </form>
           </div>
-          <div class="contact__content">
+          <div class="contact__content" id="hotel">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d425998.14892663143!2d-70.9100195384674!3d-33.472472762753654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5410425af2f%3A0x8475d53c400f0931!2sSantiago%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1664646589661!5m2!1ses!2scl"
               width="600"
